register button align fix

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1904,7 +1904,7 @@
         letter-spacing: 2.4px;
         position: fixed;
         top: 7;
-        right: -15px;
+        right: -28px;
         -webkit-transform: translateX(100%);
         -ms-transform: translateX(100%);
         transform: translateX(100%);
